test/scc/expr/semantic-errors/154.a
154.t:3:25: error: too many initializer values